# underwater_robot_ws

./: .gitignore  scp_pkg.sh
src/cabin_controller/: CMakeLists.txt  package.xml
src/cabin_controller/cabin_controller/: serial_to_mcu.py  yaw_pid.py
src/cabin_controller/launch/: controller.launch.py  vehical_controller.launch.py
src/cabin_controller/scripts/: pid.py  serial_to_mcu.py  yaw_pid.py
src/cabin_controller/src/: pwm_controller.cpp  thruster_controller.cpp
src/cabin_gui/: CMakeLists.txt  package.xml
src/cabin_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h
src/cabin_interface/: CMakeLists.txt  package.xml
src/cabin_interface/msg/: ControlCmd.msg  Position.msg  Pwm.msg  Sonar.msg  Thruster.msg
src/cabin_teleop/: CMakeLists.txt  package.xml
src/cabin_teleop/include/cabin_teleop/: joy_controller.hpp
src/cabin_teleop/launch/: joystick_start.launch.py
src/cabin_teleop/src/: joy_controller.cpp
src/fdilink_ahrs_ROS2/: CMakeLists.txt  myudev.sh  wheeltec_udev.sh
src/fdilink_ahrs_ROS2/launch/: ahrs_driver.launch.py
src/fdilink_ahrs_ROS2/src/: ahrs_driver.cpp  imu_tf.cpp
src/ping360_sonar/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ping360_sonar/launch/: ping360_bringup.launch.py  ping360_bringup_py.launch.py  ping360_rosbag_record.launch.py  ping360_sonar.launch.py
src/ping360_sonar/ping360_sonar/: ping360_sonar.py  ping360_vision2D.py  sensor_color_rgb.py
src/ping360_sonar/src/: ping360.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/rviz/: auv.rviz
src/robot_description/urdf/: auv.urdf  base_link.xacro  cam.xacro  common_materials.xacro  imu.xacro  robot.xacro  sonar.xacro  uGPS.xacro
src/serial_ros2/: 使用说明.txt
src/start_auv/: CMakeLists.txt  package.xml
src/start_auv/launch/: robot_debug.launch.py  robot_run.launch.py
src/ugps/: package.xml  setup.cfg  setup.py
src/ugps/ugps/: get_position.py  position_debug.py
src/yolov5_ros2_rknn/: package.xml  setup.cfg  setup.py
src/yolov5_ros2_rknn/resource/: underwater_anchors.txt
src/yolov5_ros2_rknn/yolov5_ros2_rknn/: yolov5_rknn_node copy.py  yolov5_rknn_node.py
